[gd_scene load_steps=15 format=3 uid="uid://ch40jwptd5rlm"]

[ext_resource type="Script" path="res://main.gd" id="1_5bh33"]
[ext_resource type="Texture2D" uid="uid://ckslahg00gjqm" path="res://Title/output-onlinepngtools.png" id="2_5yp0t"]
[ext_resource type="PackedScene" uid="uid://dy2qat3wccq0b" path="res://BG.tscn" id="2_aqey5"]
[ext_resource type="Texture2D" uid="uid://o4txaxvvpb2m" path="res://buttons/Adobe Express - file.png" id="3_0u3y7"]
[ext_resource type="AudioStream" uid="uid://cjbn2ux5dclvu" path="res://Music/16 Voyager.mp3" id="5_0polb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_038qp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vg553"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jukjn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lon7f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yclqy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0vhoo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o1ya7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u5e8m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nlqr8"]

[node name="Main" type="Node2D"]
script = ExtResource("1_5bh33")

[node name="BG" parent="." instance=ExtResource("2_aqey5")]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(568, 128.5)
scale = Vector2(0.333807, 0.20638)
texture = ExtResource("2_5yp0t")

[node name="Play" type="Button" parent="."]
offset_left = 419.0
offset_top = 286.0
offset_right = 732.0
offset_bottom = 369.0
theme_override_styles/hover = SubResource("StyleBoxEmpty_038qp")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_vg553")
theme_override_styles/normal = SubResource("StyleBoxEmpty_jukjn")

[node name="Sprite2D" type="Sprite2D" parent="Play"]
position = Vector2(157, 40)
scale = Vector2(0.272169, 0.326107)
texture = ExtResource("3_0u3y7")
region_enabled = true
region_rect = Rect2(784.807, 213.318, 1139.44, 271.844)

[node name="Button" type="Button" parent="."]
offset_left = 430.0
offset_top = 398.0
offset_right = 721.0
offset_bottom = 475.0
theme_override_styles/hover = SubResource("StyleBoxEmpty_lon7f")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_yclqy")
theme_override_styles/normal = SubResource("StyleBoxEmpty_0vhoo")

[node name="Sprite2D" type="Sprite2D" parent="Button"]
position = Vector2(148, 34)
scale = Vector2(0.27305, 0.327068)
texture = ExtResource("3_0u3y7")
region_enabled = true
region_rect = Rect2(790.055, 673.278, 1128.98, 266.996)

[node name="Button2" type="Button" parent="."]
offset_left = 432.0
offset_top = 516.0
offset_right = 719.0
offset_bottom = 595.0
theme_override_styles/hover = SubResource("StyleBoxEmpty_o1ya7")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_u5e8m")
theme_override_styles/normal = SubResource("StyleBoxEmpty_nlqr8")

[node name="Sprite2D" type="Sprite2D" parent="Button2"]
position = Vector2(144, 36)
scale = Vector2(0.273863, 0.311189)
texture = ExtResource("3_0u3y7")
region_enabled = true
region_rect = Rect2(801.915, 1107.23, 1121.36, 286.865)

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_0polb")
volume_db = -5.0
autoplay = true

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
